27/07/2018
==========
-Finished most of usrintf work for mess (0.37b7 version)
-ZX Spectrum Plus 3 models work
-NECT765 responds state and control functions
-Intial work on wave sound interface

26/07/2018
==========
-Border emulation completed for all ZX Spectrum models
-Sound while saving a file for all ZX Spectrum models
-NEC765 in progress

25/07/2018
==========
-Implemented displayImageInfo and a few more functions in mess.java
-WIP NEC765 and Floppy Disk support

24/07/2018
==========
-Loads Z80 128k files in ZX Spectrum 128k
-More work on usrintf 

23/07/2018
==========
-Added ZX Spectrum driver
-Added ZX Spectrum (BusySoft Upgrade) driver
-Added ZX Spectrum (De Groot's Upgrade) driver
-Added ZX Spectrum (Collier's Upgrade) driver
-Added ZX Spectrum (LEC Upgrade) driver
-Added Inves Spectrum 48K+ driver
-Added TK90x Color Computer driver
-Added TK95 Color Computer driver
-Added TC2048 driver
-Added TS2068 driver
-Added ZX Spectrum 128 driver
-Added ZX Spectrum 128 (Spain) driver
-Added ZX Spectrum +2 driver
-Added ZX Spectrum +2a driver
-Added ZX Spectrum +3 driver
-Added ZX Spectrum +2 (France) driver
-Added ZX Spectrum +2 (Spain) driver
-Added ZX Spectrum +3 (Spain) driver
-Added ZX Spectrum +3e driver
-Added ZX Spectrum +4 driver
-Sound, tape and disk emulation for all ZX Spectrum models not implemented
-Added speaker sound emulation (not tested)
-Moved eventlst and border to mess package
-Ported ui_text, ui_textH to mess specific (0.37b7)
-Intial work to port usrintrf to mess specific (0.37b7)

22/07/2018
==========
-First preliminary version of the 128k model. WIP, doesn't works (several memory banks issues)

20/07/2018
==========
-Full SNA and Z80 file formats support

19/07/2018
==========
-Initial zx spectrum 48k driver but doesn't seem to work properly
-Added border class and preliminary border emulation
-Added first version of eventlst

20/03/2018
==========
-More nes driver progress but doesn't seem to work properly

19/03/2018
==========